--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "stripe": "^8.138.0"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.7",
     "@testing-library/dom": "^7.31.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
